Fix for AVH facets spacing CSS.
git-svn-id: http://ala-hubs.googlecode.com/svn/trunk/hubs-webapp@924 1df052cb-f7c2-36cd-ec53-7bc1070de0c5

--- a/src/main/webapp/css/avh2012/widget.css
+++ b/src/main/webapp/css/avh2012/widget.css
@@ -52,6 +52,10 @@
     color: #545454;
 }
 
+.sidebar h4 {
+    margin-top: 0;
+}
+
 body table td {
     font-size: 13px;
 }
